classDiagram
  class Super{
    + UUID id
    + DateTime createdAt
    + DateTime updatedAt
  }
  class User {

    + string firstName
    + string lastName
    + string email
    + string password
    + boolean isAdmin
    + register()
    + updateProfile()
    + delete()
    + update to admin()
  }
  class Place {
    + string title
    + string description
    + float price
    + float latitude
    + float longitude
    + UUID ownerId
    + create()
    + update()
    + delete()
    + list()
  }
  class Review {

    + UUID placeId
    + UUID userId
    + int rating
    + string comment
    + create()
    + update()
    + delete()
    + listByPlace()
  }
  class Amenity {

    + string name
    + string description
    + create()
    + update()
    + delete()
    + list()
  }

  Super <|-- User
  Super <|-- Place
  Super <|-- Review
  Super <|-- Amenity
  User "1" *-- "0..*" Place : owns
  Place "1" *-- "0..*" Review : has
  Place "0..*" *-- "0..*" Amenity : has
  User "1" *-- "0..*" Review : has